# moro

./: .gitignore  .importlinter.toml  .pre-commit-config.yaml  CLAUDE.md  fantia_test_analysis.md  pyproject.toml  tox.ini
.claude/: settings.json
.claude/commands/: ddd.md  smart-commit.md  tdd.md
.github/scripts/: check_version_bump.py  get_version.py
.github/workflows/: ci.yml
config/: epgstation-2.7.3.json
docs/: url_download_plan.md
docs/design/2025-08-10_fantia-progress-bars/: design.md  requirements.md
docs/specs/2025-08-10_example-todo/: design.md  requirements.md  tasks.md
docs/specs/2025-08-10_fantia-progress-bars/: implementation-tasks.md
docs/specs/2025-08-11_epgstation-client/: design.md  requirements.md  tasks.md
docs/specs/2025-08-11_epgstation-responsibility-separation/: design.md  requirements.md  tasks.md
docs/specs/2025-08-12_epgstation-title-filter/: design.md  requirements.md  tasks.md
docs/specs/2025-08-13_test-strategy-restructure/: design.md  requirements.md  tasks.md  test_refactor_completion_report.md
docs/test_design/: 2025-07-20_create_app_config_env_vars.md  2025-07-24_auto_session_update.md  2025-07-24_multi_cookie_provider.md  2025-07-24_selenium_session_provider.md  2025-07-24_session_id_provider.md  2025-08-03_fantia_repository_implementation.md  2025-08-03_fantia_repository_interface.md  2025-08-05_fantia_save_post.md  2025-08-09_fantia_post_repository_get_many_iterator.md
scripts/: analyze_fantia_tests.py  importlinter_custom.py  validate_test_structure.py
src/moro/cli/: _progress.py  _utils.py  cli.py  config.py  ebook.py  epgstation.py  example.py  fantia.py  pixiv.py  todo.py  tracklist.py  tracklist_extractor.py  url_downloader.py
src/moro/config/: settings.py  settings.toml
src/moro/dependencies/: __init__.py  container.py
src/moro/modules/: common.py  fantia.py  number_prefix.py  pixiv.py  tracklist_extractor.py  url_downloader.py
src/moro/modules/bigcomics/: __init__.py  config.py  domain.py  infrastructure.py  usecases.py
src/moro/modules/epgstation/: __init__.py  config.py  domain.py  infrastructure.py  usecases.py
src/moro/modules/fantia/: __init__.py  config.py  domain.py  infrastructure.py  usecases.py
src/moro/modules/todo/: __init__.py  config.py  domain.py  infrastructure.py  usecases.py
src/moro/scenarios/: __init__.py  ebook.py
src/moro/services/: __init__.py  fantia_auth.py  fantia_download.py  fantia_file.py
src/moro/usecases/: fantia.py
tests/: common.py  conftest.py  test_cli.py  test_cli_epgstation.py  test_epgstation_config.py  test_fantia.py  test_fantia_auth_service.py  test_fantia_download_service.py  test_fantia_file_service.py  test_fantia_repository_implementation.py  test_fantia_services.py  test_fantia_usecases.py  test_injector.py  test_list_recordings_usecase.py  test_main.py  test_number_prefix.py  test_pixiv.py  test_pydantic.py  test_recording_data.py  test_session_provider.py  test_tracklist.py  test_url_downloader.py  test_url_downloader_cli.py  test_url_downloader_integration.py  test_url_downloader_prefix.py  test_url_downloader_refactored.py  test_url_downloader_zip.py  test_video_file.py
tests/cli/: test_epgstation_integration.py  test_epgstation_title_filter.py  test_fantia_cli.py  test_formatters.py  test_progress.py  test_todo.py
tests/config/: test_settings.py
tests/e2e/: README.md
tests/e2e/workflows/: test_fantia_download_workflow.py
tests/factories/: __init__.py  common_factories.py  epgstation_factories.py  fantia_factories.py
tests/integration/: README.md
tests/integration/external_systems/: test_fantia_api_integration.py
tests/modules/: test_fantia.py  test_fantia_file_downloader.py  test_fantia_infrastructure_progress.py  test_fantia_repository_implementation.py  test_fantia_save_post_usecase.py  test_todo_domain.py  test_todo_infrastructure.py  test_todo_usecases.py
tests/modules/epgstation/: test_epgs_cookie_cache.py  test_epgs_module_imports.py  test_epgs_recording_data.py  test_epgs_recording_repository.py  test_epgs_session_provider.py  test_epgs_usecases_refactored.py  test_epgs_video_file.py  test_list_recordings_usecase.py  test_performance_title_filter.py  test_title_filter_service.py
tests/unit/cli/: test_epgstation_performance.py  test_formatters.py  test_progress.py
tests/unit/core/: skip_test_hypothesis.py  test_injector.py  test_main.py  test_settings.py
tests/unit/modules/: __init__.py
tests/unit/modules/epgstation/: README.md  __init__.py  test_domain.py  test_infrastructure.py  test_usecases.py
tests/unit/modules/fantia/: README.md  __init__.py  test_domain.py  test_infrastructure.py  test_usecases.py
tests/unit/modules/number_prefix/: test_number_prefix.py
tests/unit/modules/pixiv/: test_pixiv.py
tests/unit/modules/todo/: README.md  __init__.py  test_todo_domain.py  test_todo_infrastructure.py
tests/unit/modules/tracklist/: test_tracklist.py
tests/unit/modules/url_downloader/: test_url_downloader.py
